--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: rgb(61, 126, 248);
-    box-sizing: border-box;
+    box-sizing:border-box;
+}
+body{width:100%;
 }
 .header{
     width: 100%;
