--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@
     height: 300px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 h1{
     font-size: 3.5em;
@@ -66,12 +66,13 @@ span{
     font-size: medium;
 }
 .input_wrapper > button{
+    width: 50px;
     color: white;
     background-color: rgb(61, 126, 248);
     border-radius: 0 20px 20px 0;
     border: none;
-    padding: 12px;
     font-weight: 600;
+    /* padding: 5px; */
     font-size: 15px;
     cursor: pointer;
 }
@@ -92,13 +93,10 @@ a{
 }
 
 @media screen and (max-device-width: 620px) and (orientation: portrait) {
-    .main{
-        background-color: red;
-    }
     *{
         box-sizing: border-box;
     }
     .input_wrapper{
-        width: 85%;
+        width: 90%;
     }
 }
