--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@ a{
     margin: 5px;
 }
 
-@media screen and (max-device-width: 620px) and (orientation: portrait) {
+@media screen and (max-width: 620px){
     *{
         box-sizing: border-box;
     }
